namespace PCBuilder.PCParts
{
    public class Cpu : PCPart
    {
        
    }
}