namespace PCBuilder.PCParts
{
    public class HeatSink : PCPart
    {
        
    }
}