namespace PCBuilder.PCParts
{
    public class PowerSupplier : PCPart
    {
        
    }
}