namespace PCBuilder.PCParts
{
    public class Ram : PCPart
    {
        
    }
}